First attempt at multi variant.

--- a/config.yml
+++ b/config.yml
@@ -28,6 +28,7 @@ engine:                      # Engine settings.
     Move Overhead: 500       # Increase if your bot flags games too often.
     Threads: 2               # Max CPU threads the engine can use.
     Hash: 256                # Max memory (in megabytes) the engine can allocate.
+    EvalFile: "nn-9e3c6298299a.nnue;3check-bba0afd355bd.nnue;atomic-6afe873e5ac3.nnue;kingofthehill-581cd1c0b2e5.nnue;racingkings-9ef6dd7cfdfb.nnue"
 #   Clear Hash: true         # Clear the hash table
 #   go_commands:             # Additional options to pass to the UCI go command.
 #     nodes: 1               # Search so many nodes only.
@@ -69,14 +70,14 @@ challenge:                   # Incoming challenges.
   variants:                  # Chess variants to accept (https://lichess.org/variant).
     - standard
     - fromPosition
-#   - antichess
-#   - atomic
+    - antichess
+    - atomic
     - chess960
-#   - crazyhouse
-#   - horde
-#   - kingOfTheHill
-#   - racingKings
-#   - threeCheck
+    - crazyhouse
+    - horde
+    - kingOfTheHill
+    - racingKings
+    - threeCheck
   time_controls:             # Time controls to accept.
     - bullet
     - blitz
